# Bird-Bot

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DISCORD_INTENT_APPLICATION_GUIDE.md  LEGACY_ARCHIVE.md  PRIVACY.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  REFACTORING_TEST_CHECKLIST.md  achievement_cog.py  backup_cog.py  bot.py  check_status_cog.py  config.json  config_cog.py  create_invitation_cog.py  dnd_cog.py  game_dnd_cog.py  game_spymode_cog.py  giveaway_cog.py  illegal_team_act_cog.py  logfile_cog.py  notebook_cog.py  old_updates.md  pyproject.toml  rating_cog.py  requirements.txt  role_cog.py  run.py  runtime_env.py  voice_channel_cog.py  welcome_cog.py
bot/: __init__.py  main.py
bot/cogs/: __init__.py  achievement_cog.py  backup_cog.py  ban_cog.py  check_status_cog.py  game_dnd_cog.py  (+14 more)
tests/: test_achievement_db.py  test_achievement_interaction_flow.py  test_ban_db.py  test_ban_interaction_flow.py  test_check_status_db.py  test_checkstatus_backup_interaction_flow.py  test_db_connect.py  test_giveaway_db.py  test_giveaway_interaction_flow.py  test_invitation_full_message.py  test_log_helpers.py  test_logging_callsite_scan.py  test_migrate_config_to_yaml_temp.py  test_privateroom_db.py  test_privateroom_interaction_flow.py  test_privateroom_renewal.py  test_role_db.py  test_role_interaction_flow.py  test_runtime_metadata.py  test_shop_db.py  test_shop_interaction_flow.py  test_shop_ui_metadata.py  test_task_helpers.py  test_tickets_db.py  test_tickets_interaction_flow.py  test_ui_locale_metadata.py  test_voice_channel_db.py  test_voice_channel_interaction_flow.py  test_welcome_games_interaction_flow.py
tools/: check_locales.py  encrypt_database.py  field_classification.yaml  migrate_config_to_yaml.py  seed_db.py
(+150 files in other folders)
