[project]
name = "dcgameserverhelper"
version = "2.0.0"
description = "Discord game server helper bot"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "aiohttp",
    "aiosqlite",
    "discord.py>=2.7.1",
    "matplotlib",
    "pillow",
    "PySimpleGUI<5",
    "requests",
    "ruamel.yaml",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
lint = [
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "old_function",
    "old_test",
]

[tool.ruff.lint]
select = [
    "E722",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
